--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
     npm install
     env
     cd Angular-Universal-OnEB
-    ng build --prod
+    ng build --dev
     env
     cd /home/ubuntu/DevOps/_work/1/s/dist
     zip -r Angular-Universal-OnEB.zip *
